Fixed layout shift when script is added outside of search div

--- a/web/css/layout/_header.less
+++ b/web/css/layout/_header.less
@@ -107,7 +107,8 @@
                 }
             }
             + *,
-            + .navigation-wrapper + * {
+            + .navigation-wrapper + *,
+            + .navigation-wrapper + script + * {
                 .margin-left(auto);
             }
         }
